--- a/package.json
+++ b/package.json
@@ -2,7 +2,14 @@
     "name": "Azure-IoT-Mongo",
     "description": "A Node-RED Project",
     "version": "0.0.1",
-    "dependencies": {},
+    "dependencies": {
+        "node-red-contrib-cip-st-ethernet-ip": "2.0.0-beta.3",
+        "node-red-contrib-azure-iot-hub": "0.4.0",
+        "node-red-contrib-simple-message-queue": "0.2.8",
+        "node-red-dashboard": "3.5.0",
+        "node-red-node-mongodb": "0.2.5",
+        "node-red-node-sqlite": "1.0.3"
+    },
     "node-red": {
         "settings": {
             "flowFile": "flow.json",
